# mac-configs

./: README.md  kitty.conf  link_settings.py  make_link.py  pyproject.toml  test_make_list.py  zshrc
configs/: gitconfig  ideavimrc  pypoetry_config.toml  zprofile  zshrc
others/: fig_settings
